fixing some formatting and layout issues

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,5 +1,3 @@
-@import "mafs/core.css";
-
 .App {
     text-align: center;
     font-family: sans-serif;
@@ -15,48 +13,43 @@
 .wrapper {
     display: grid; 
     grid-template-columns: repeat(3, 1fr);
-    min-height: 100vh;
+    row-gap: 1%;
+    column-gap: .5%;
+    height: 100vh;
 }
 .wrapper > div {
-    margin: 5px;
     border: 1px solid #344e41;
     padding: 5px;
 }
 .header {
     grid-column: 1/4;
-    grid-row: 1;
+    /* grid-row: 1; */
 }
 .shape {
     grid-column: 1;
-    grid-row: 2;
+    /* grid-row: 2; */
 }
 .points {
     grid-column: 2;
-    grid-row: 2;
+    /* grid-row: 2; */
 }
 .function {
     grid-column: 3;
-    grid-row: 2;
-}
-.toggles {
-    grid-column: 1/3;
-    grid-row: 3;
+    /* grid-row: 2; */
 }
 .display {
     grid-column: 1/3;
-    grid-row: 4/5;
+    grid-row: 3/5;
 }
 .steps {
     grid-column: 3;
     grid-row: 3/5;
 }
-.footer {
-    grid-column: 1/4;
-    grid-row: 5;
-}
 
 .turtle {
+    /* margin: 5px; */
     margin-left: 25%;
+    margin-right: 25%;
 }
 
 [type="text"] {
